[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclimo"
version = "1.0"
authors = [
  { name="Eric J Drewitz, USDA/USFS"},
]
description = "An Open Source Package For Climate Analysis"
readme = "README.md"
keywords = ["meteorology", "science", "data-analysis", "weather", "forecasting", "climatology", "climate science"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
	"matplotlib>=3.7",
	"metpy>=1.5.1",
	"numpy>=1.24",
	"pandas>=2.2",
  "xarray>=2023.1.0",
  "cartopy>=0.21.0",
  "xeofs>=3.0.4",
  "georasters>=0.5.29"
 
]
